--- a/setup.cfg
+++ b/setup.cfg
@@ -1,18 +1,28 @@
 [metadata]
 name = pyrobox_Rasan147
-version = 0.5.0
+version = 0.5.1
 authors = Rasan
 author_email= wwwqweasd147@gmail.com
-description = "A small example package"
+description = "Ultimate version of Python http.server for File Sharing"
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/RaSan147/py_httpserver_Ult
+home-page = https://github.com/RaSan147/py_httpserver_Ult
+project_urls =
+    Bug Tracker = https://github.com/RaSan147/py_httpserver_Ult/issues
+    Documentation = https://github.com/RaSan147/py_httpserver_Ult
+    Source Code = https://github.com/RaSan147/py_httpserver_Ult
+    Release Notes = https://github.com/RaSan147/py_httpserver_Ult
 
 classifiers = 
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    License :: OSI Approved :: MIT License
+    Operating System :: OS Independent
+    Topic :: Internet :: File Transfer Protocol (FTP)
+    Topic :: Communications :: File Sharing
 
 [options]
-package = find:
-python-requires = >=3.5
+python-requires = >=3.7
