made my 1st push

--- a/build_test_files/setup.cfg
+++ b/build_test_files/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = pyrobox
-version = 0.5.0
+name = pyrobox_Rasan147
+version = 0.5.1
 authors = Rasan
 author_email= wwwqweasd147@gmail.com
-description = Personal DropBox for Private Network
+description = "Personal DropBox for Private Network"
 long_description = file: README.md
 long_description_content_type = text/markdown
 home-page = https://github.com/RaSan147/py_httpserver_Ult
