--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,19 @@
 [metadata]
 name = pyrobox
-version = 0.6.4
+version = 0.6.5
 authors = Rasan
 author_email= wwwqweasd147@gmail.com
 description = Personal DropBox for Private Network
 long_description = file: README.md
 long_description_content_type = text/markdown
+license_files = LICENSE
 home-page = https://github.com/RaSan147/py_httpserver_Ult
 project_urls =
     Bug Tracker = https://github.com/RaSan147/py_httpserver_Ult/issues
     Documentation = https://github.com/RaSan147/py_httpserver_Ult
     Source Code = https://github.com/RaSan147/py_httpserver_Ult
     Release Notes = https://github.com/RaSan147/py_httpserver_Ult/releases
+
 
 classifiers = 
     Programming Language :: Python :: 3.7
