--- a/setup.cfg
+++ b/setup.cfg
@@ -7,12 +7,12 @@ description = Personal DropBox for Private Network
 long_description = file: README.md
 long_description_content_type = text/markdown
 license_files = LICENSE
-home-page = https://github.com/RaSan147/py_httpserver_Ult
+home-page = https://github.com/RaSan147/pyrobox
 project_urls =
-    Bug Tracker = https://github.com/RaSan147/py_httpserver_Ult/issues
-    Documentation = https://github.com/RaSan147/py_httpserver_Ult
-    Source Code = https://github.com/RaSan147/py_httpserver_Ult
-    Release Notes = https://github.com/RaSan147/py_httpserver_Ult/releases
+    Bug Tracker = https://github.com/RaSan147/pyrobox/issues
+    Documentation = https://github.com/RaSan147/pyrobox
+    Source Code = https://github.com/RaSan147/pyrobox
+    Release Notes = https://github.com/RaSan147/pyrobox/releases
 
 
 classifiers = 
