Add User class and unit tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"python.testing.pytestArgs": [
+		"dev_src/test_user_mgmt.py"
+	],
+	"python.testing.unittestEnabled": false,
+	"python.testing.pytestEnabled": true
 }
