--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pyrobox
 version = 0.8.0
-authors = Rasan
+author = Rasan
 author_email= wwwqweasd147@gmail.com
 description = Personal DropBox for Private Network
 long_description = file: README.md
