fixed 7z, improved security

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyrobox
-version = 0.9.7
+version = 0.9.8
 author = Rasan
 author_email= wwwqweasd147@gmail.com
 description = Personal DropBox for Private Network
@@ -21,6 +21,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Topic :: Internet :: File Transfer Protocol (FTP)
